--- a/Pages/Borrowings/Edit.cshtml
+++ b/Pages/Borrowings/Edit.cshtml
@@ -16,7 +16,7 @@
             <input type="hidden" asp-for="Borrowing.ID" />
             <div class="form-group">
                 <label asp-for="Borrowing.MemberID" class="control-label"></label>
-                <select asp-for="Borrowing.MemberID" class="form-control" asp-items="ViewBag.MemberID"></select>
+                <select asp-for="Borrowing.MemberID" class="form-control" asp-items="ViewBag.Member.FullName"></select>
                 <span asp-validation-for="Borrowing.MemberID" class="text-danger"></span>
             </div>
             <div class="form-group">
