--- a/Pages/Borrowings/Edit.cshtml
+++ b/Pages/Borrowings/Edit.cshtml
@@ -21,7 +21,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="Borrowing.BookID" class="control-label"></label>
-                <select asp-for="Borrowing.BookID" class="form-control" asp-items="ViewBag.BookID"></select>
+                <select asp-for="Borrowing.BookID" class="form-control" asp-items="ViewBag.Book"></select>
                 <span asp-validation-for="Borrowing.BookID" class="text-danger"></span>
             </div>
             <div class="form-group">
